Tue Jun 10 11:38:15 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * examples/RTScheduling/DT_Creator.cpp:

          Added a static cast to avoid warnings on QNX.

Mon Jun  9 12:28:24 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/OctetSeq/run_test.pl:

          Testing a change to utilize my new process modules that will
          simplify the test script modifications necessary for VxWorks
          testing.

Mon Jun  9 12:14:12 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/MonitorControl/MonitorManager.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/MonitorManager.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/NotificationServiceMonitor_i.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/NotificationServiceMonitor_i.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.cpp:

          These files require that ACE_HAS_MONITOR_FRAMEWORK be defined to 1
          in order to compile.

        * orbsvcs/orbsvcs/Notify/MonitorControl/Control_Registry.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.inl:

          Removed trailing whitespace.

Mon Jun 09 11:13:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * utils/NamingViewer/NamingViewer.cpp:
        * utils/NamingViewer/SelectNSDialog.cpp:

          Correct Wide character build miss-converstions.

        * tao/CORBA_methods.h:
        * tao/ORB.cpp:
        * tao/ORB_Core.h:
        * tao/ORB_Core.cpp:

          Provide wide "helper" ORB_Init() only in wide char builds.
          (Too many tests try and send wide versions of argv
          into ORB_init() and whilst that function was written
          with converters in mind, it was only defined in terms
          of the narrow OMG standard interface, having extra helper
          "auto-converting" interfaces helps.)

Mon Jun 09 11:13:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
